@@ -1,3 +1,7 @@
+2013-10-25  Werner Lemberg  <wl@gnu.org>
+
+	* src/ttdebug.c (RunIns) <'n'>: Handle ranges correctly.
+
 2013-10-16  Werner Lemberg  <wl@gnu.org>
 
 	* src/ttdebug.c (RunIns): Handle `Enter' key correctly.
